OLMIS-1549: Added missing tests, JSDocs and removed duplicated module

--- a/src/main/webapp/requisition-approval/requisition-approval-list.html
+++ b/src/main/webapp/requisition-approval/requisition-approval-list.html
@@ -14,7 +14,7 @@
                     <th>{{'label.period.start.date' | message}}</th>
                     <th>{{'label.period.end.date' | message}}</th>
                     <th>{{'label.date.submitted' | message}}</th>
-                    <th>{{'msg.emergency' | message}}</th>
+                    <th>{{'label.emergency' | message}}</th>
                 </tr>
             </thead>
             <tbody>
