--- a/src/main/webapp/requisition-convert-to-order/convert-to-order.html
+++ b/src/main/webapp/requisition-convert-to-order/convert-to-order.html
@@ -31,7 +31,7 @@
 						<th>{{'label.period.end.date' | message}}</th>
 						<th>{{'label.date.modified' | message}}</th>
 						<th>{{'label.supplyingDepot' | message}}</th>
-						<th>{{'msg.emergency' | message}}</th>
+						<th>{{'label.emergency' | message}}</th>
 					</tr>
 				</thead>
 				<tbody>
