--- a/src/main/webapp/requisition-initiate/requisition-initiate.html
+++ b/src/main/webapp/requisition-initiate/requisition-initiate.html
@@ -55,7 +55,7 @@
                 </label>
                 <label>
                     <input type="radio" ng-model="vm.emergency" ng-value="true"/>
-                    {{'msg.emergency' | message}}
+                    {{'label.emergency' | message}}
                 </label>
             </fieldset>
             <input class="btn btn-primary" type="submit" value="{{'button.search'|message}}"/>
