--- a/src/main/webapp/requisition-search/requisition-search.html
+++ b/src/main/webapp/requisition-search/requisition-search.html
@@ -43,7 +43,7 @@
                     <th>{{'label.period.end.date' | message}}</th>
                     <th>{{'label.date.submitted' | message}}</th>
                     <th>{{'label.status' | message}}</th>
-                    <th>{{'msg.emergency' | message}}</th>
+                    <th>{{'label.emergency' | message}}</th>
                     <th>{{'msg.requisition.view.offline' | message}}</th>
                 </tr>
             </thead>
