--- a/src/main/webapp/requisition-view/header.html
+++ b/src/main/webapp/requisition-view/header.html
@@ -9,7 +9,7 @@
   -->
 <aside class="requisition-info">
     <div class="requisition-type" ng-class="{'emergency': vm.requisition.emergency, 'regular': !vm.requisition.emergency}">
-        <span>{{'vm.requisitionType'}}</span>
+        <span>{{vm.requisitionType | message}}</span>
     </div>
 
     <dl class="requisition-head-block">
@@ -22,6 +22,6 @@
         <dt ng-if="requisition.facility.geographicZone.parent.name">{{'label.province' | message}}</dt>
         <dd ng-if="requisition.facility.geographicZone.parent.name">{{vm.requisition.facility.geographicZone.parent.name}}</dd>
         <dt>{{'label.reportingPeriod' | message}}</dt>
-        <dd>{{vm.periodDisplayName()}}</dd>
+        <dd>{{vm.requisition.processingPeriod | period}}</dd>
     </dl>
 </aside>
