OLMIS-1085: made pagination controller validate pages with provided item validator

--- a/src/main/webapp/requisition-full-supply/full-supply.html
+++ b/src/main/webapp/requisition-full-supply/full-supply.html
@@ -20,7 +20,7 @@
 	</table>
 </div>
 <openlmis-pagination current-page="vm.currentPage"
-	is-page-valid="vm.isPageValid"
-	number-of-pages="vm.paginatedLineItems.length"
-	change-page="vm.changePage">
+	is-item-valid="vm.isLineItemValid"
+	change-page="vm.changePage"
+	items="vm.paginatedLineItems">
 </openlmis-pagination>
