--- a/src/main/webapp/requisition-non-full-supply/non-full-supply.html
+++ b/src/main/webapp/requisition-non-full-supply/non-full-supply.html
@@ -24,7 +24,7 @@
 	</button>
 </div>
 <openlmis-pagination current-page="vm.currentPage"
-	is-page-valid="vm.isPageValid"
-	number-of-pages="vm.paginatedLineItems.length"
-	change-page="vm.changePage">
+	is-item-valid="vm.isLineItemValid"
+	change-page="vm.changePage"
+	items="vm.paginatedLineItems">
 </openlmis-pagination>
