OLMIS-1550: fixed calling submit endpoint and disabled changing pod values if it is submitted

--- a/src/main/webapp/proof-of-delivery-view/footer.html
+++ b/src/main/webapp/proof-of-delivery-view/footer.html
@@ -2,18 +2,27 @@
     <dl>
         <dt>{{'label.deliveredBy' | message}}</dt>
         <dd>
-            <input type="text" ng-model="vm.pod.deliveredBy"/>
-            <div ng-if="!vm.pod.deliveredBy || vm.pod.deliveredBy === ''" class="cell-error-message">{{'msg.fieldRequired' | message}}</div>
+            <div ng-if="!vm.isSubmitted()">
+                <input type="text" ng-model="vm.pod.deliveredBy"/>
+                <div ng-if="!vm.pod.deliveredBy || vm.pod.deliveredBy === ''" class="cell-error-message">{{'msg.fieldRequired' | message}}</div>
+            </div>
+            <div ng-if="vm.isSubmitted()">{{vm.pod.deliveredBy}}</div>
         </dd>
         <dt>{{'label.receivedBy' | message}}</dt>
         <dd>
-            <input type="text" ng-model="vm.pod.receivedBy"/>
-            <div ng-if="!vm.pod.receivedBy || vm.pod.receivedBy === ''" class="cell-error-message">{{'msg.fieldRequired' | message}}</div>
+            <div ng-if="!vm.isSubmitted()">
+                <input type="text" ng-model="vm.pod.receivedBy"/>
+                <div ng-if="!vm.pod.receivedBy || vm.pod.receivedBy === ''" class="cell-error-message">{{'msg.fieldRequired' | message}}</div>
+            </div>
+            <div ng-if="vm.isSubmitted()">{{vm.pod.receivedBy}}</div>
         </dd>
         <dt>{{'label.receivedDate' | message}}</dt>
         <dd>
-            <openlmis-datepicker input-id="receivedDate" value="vm.pod.receivedDate"></openlmis-datepicker>
-            <div ng-if="!vm.pod.receivedDate" class="cell-error-message">{{'msg.fieldRequired' | message}}</div>
+            <div ng-if="!vm.isSubmitted()">
+                <openlmis-datepicker input-id="receivedDate" value="vm.pod.receivedDate"></openlmis-datepicker>
+                <div ng-if="!vm.pod.receivedDate" class="cell-error-message">{{'msg.fieldRequired' | message}}</div>
+            </div>
+            <div ng-if="vm.isSubmitted()">{{vm.pod.receivedDate.toDateString()}}</div>
         </dd>
     </dl>
 </aside>
