OLMIS-1583: Created new comment for requisition
* added new module for status messages
* added getting all status messages for current requisition
* button to add new status message appears only when requisition has no status messages for current status

--- a/src/main/webapp/requisition-view/requisition-view.html
+++ b/src/main/webapp/requisition-view/requisition-view.html
@@ -12,6 +12,7 @@
         <a class="btn btn-primary" openlmis-download="{{vm.getPrintUrl()}}" target="_blank">{{'button.print' | message}}</a>
     </h2>
     <ng-include src="'requisition-view/header.html'"></ng-include>
+    <status-messages requisition="vm.requisition"></status-messages>
     <ul class="nav nav-tabs">
         <li ui-sref-active="active" role="presentation"
             ng-class="{'error': !vm.isFullSupplyTabValid()}">
