OLMIS-1692: Changed from uib-popover to openlmis-popover

--- a/src/main/webapp/requisition-summary/requisition-summary.html
+++ b/src/main/webapp/requisition-summary/requisition-summary.html
@@ -2,9 +2,8 @@
     <span class="label">{{'msg.totalRequisitionCost' | message}}</span>
     <span>{{vm.calculateTotalCost() | currency}}</span>
     <button class="btn btn-primary"
-            uib-popover-template="'requisition-summary/requisition-summary-popover.html'"
-            popover-placement="top-right"
-            popover-is-open="vm.popoverOpen">
+    		popover
+            popover-template="requisition-summary/requisition-summary-popover.html">
             <i class="fa fa-list-ul"></i>
     </button>
 </div>
