OLMIUS-1692: Updated popover icon

--- a/src/main/webapp/openlmis-popover/popover-button.html
+++ b/src/main/webapp/openlmis-popover/popover-button.html
@@ -1,1 +1,1 @@
-<button class="show-popover">{{ 'popover.showButton' | message}}</button>
+<a class="show-popover">{{ 'popover.showButton' | message}}</a>
