OLMIS-1601: Added automatic save on change to the requisition screen
There was a problem with our RequisitionTemplate class modifying model template
and breaking the offline mode - fixed that by removing direct changes of the
template and only adding extra properties. Keep in mind that old requisitions
stored withing the local storage won't work with the new change. Also added
a autosave feature to the requisition screen. User will be informed about the
save ~3 secons after his/her last action(changes are saved in real time)

--- a/src/main/webapp/requisition-full-supply/full-supply.html
+++ b/src/main/webapp/requisition-full-supply/full-supply.html
@@ -2,7 +2,7 @@
 	<table table-pinned-columns>
 		<thead>
 			<tr>
-				<th class="col-{{column.name}}" ng-repeat="column in vm.columns | orderBy : 'displayOrder'" ng-class="{sticky: !column.canChangeOrder}" popover="{{column.definition}}">{{column.label}}
+				<th class="col-{{column.name}}" ng-repeat="column in vm.columns | orderBy : 'displayOrder'" ng-class="{sticky: !column.$canChangeOrder}" popover="{{column.definition}}">{{column.label}}
 					<div ng-if="vm.isSkipColumn(column)">
 						<a href="" ng-click="vm.skipAll()">{{'requisition.lineItem.skip.all' | message}}</a> |
 						<a href="" ng-click="vm.unskipAll()">{{'requisition.lineItem.skip.none' | message}}</a>
