--- a/src/main/webapp/requisition-full-supply/full-supply.html
+++ b/src/main/webapp/requisition-full-supply/full-supply.html
@@ -22,5 +22,5 @@
 <openlmis-pagination current-page="vm.currentPage"
 	is-item-valid="vm.isLineItemValid"
 	change-page="vm.changePage"
-	items="vm.paginatedLineItems">
+	paginated-items="vm.paginatedLineItems">
 </openlmis-pagination>
