OLMIS-1085: change message info for pagination

--- a/src/main/webapp/openlmis-pagination/openlmis-pagination.html
+++ b/src/main/webapp/openlmis-pagination/openlmis-pagination.html
@@ -1,6 +1,6 @@
 <div class="openlmis-pagination">
 	<div class="pagination-info">
-		{{vm.getAllItemsCount()}} {{'msg.lineItems' | message}}, {{'msg.showing' | message}} {{vm.getCurrentPageSize()}} {{'msg.lineItems' | message}}
+		{{'msg.showing' | message}} {{vm.getCurrentPageSize()}} {{'msg.lineItems' | message}} {{'msg.outOf' | message}} {{vm.getAllItemsCount()}} {{'msg.total' | message}}
 	</div>
 	<ul class="pagination pagination-sm">
 		<li ng-class="{disabled : vm.isFirstPage()}">
