--- a/src/main/webapp/requisition-non-full-supply/add-product-modal.html
+++ b/src/main/webapp/requisition-non-full-supply/add-product-modal.html
@@ -1,21 +1,31 @@
-<form ng-submit="addProduct(selectedProduct, requestedQuantity, requestedQuantityExplanation)">
+<form ng-submit="vm.addProduct()">
 	<div class="form-group">
 		<label for="category">{{'label.product.category' | message}}</label>
-		<select class="form-control" ng-model="selectedCategory" ng-disabled="!categories.length" ng-options="category.name for category in categories | filter:categoryVisible" required>
+		<select class="form-control"
+			ng-model="vm.selectedCategory"
+			ng-disabled="!vm.categories.length"
+			ng-options="category.name for category in vm.categories | filter:vm.categoryVisible"
+			required>
 		</select>
 	</div>
 	<div class="form-group">
 		<label for="product">{{'label.productName' | message}}</label>
-		<select class="form-control" ng-model="selectedProduct" ng-disabled="!selectedCategory" ng-options="lineItem.productName for lineItem in selectedCategory.lineItems | filter:productVisible" required>
+		<select class="form-control"
+			ng-model="vm.selectedProduct"
+			ng-disabled="!vm.selectedCategory"
+			ng-options="product.name for product in vm.selectedCategory.products | filter:vm.productVisible"
+			required>
 		</select>
 	</div>
 	<div class="form-group">
 		<label for="requestedQuantity">{{'placeholder.quantity' | message}}</label>
-		<input class="form-control" ng-model="requestedQuantity" required positive-integer>
+		<input class="form-control" ng-model="vm.requestedQuantity" required positive-integer>
 	</div>
 	<div class="form-group">
 		<label for="requestedQuantity">{{'placeholder.explanation' | message}}</label>
-		<input class="form-control" ng-model="requestedQuantityExplanation" ng-required="requestedQuantity">
+		<input class="form-control"
+			ng-model="vm.requestedQuantityExplanation"
+			ng-required="vm.requestedQuantity">
 	</div>
 	<input class="add-product" type="submit" value="{{'button.add' | message}}"></button>
 	<button type="button" data-dismiss="modal" class="cancel">{{'button.cancel' | message}}</button>
