--- a/src/main/webapp/proof-of-delivery-view/footer.html
+++ b/src/main/webapp/proof-of-delivery-view/footer.html
@@ -3,24 +3,24 @@
         <dt>{{'label.deliveredBy' | message}}</dt>
         <dd>
             <div ng-if="!vm.isSubmitted()">
-                <input type="text" ng-model="vm.pod.deliveredBy"/>
-                <div ng-if="!vm.pod.deliveredBy || vm.pod.deliveredBy === ''" class="cell-error-message">{{'msg.fieldRequired' | message}}</div>
+                <input type="text" ng-model="vm.pod.deliveredBy" ng-change="vm.pod.validateRequiredField('deliveredBy')" ng-blur="vm.pod.validateRequiredField('deliveredBy')"/>
+                <div ng-if="vm.pod.$errors.deliveredBy" class="cell-error-message">{{vm.pod.$errors.deliveredBy}}</div>
             </div>
             <div ng-if="vm.isSubmitted()">{{vm.pod.deliveredBy}}</div>
         </dd>
         <dt>{{'label.receivedBy' | message}}</dt>
         <dd>
             <div ng-if="!vm.isSubmitted()">
-                <input type="text" ng-model="vm.pod.receivedBy"/>
-                <div ng-if="!vm.pod.receivedBy || vm.pod.receivedBy === ''" class="cell-error-message">{{'msg.fieldRequired' | message}}</div>
+                <input type="text" ng-model="vm.pod.receivedBy" ng-change="vm.pod.validateRequiredField('receivedBy')" ng-blur="vm.pod.validateRequiredField('receivedBy')"/>
+                <div ng-if="vm.pod.$errors.receivedBy" class="cell-error-message">{{vm.pod.$errors.receivedBy}}</div>
             </div>
             <div ng-if="vm.isSubmitted()">{{vm.pod.receivedBy}}</div>
         </dd>
         <dt>{{'label.receivedDate' | message}}</dt>
         <dd>
             <div ng-if="!vm.isSubmitted()">
-                <openlmis-datepicker input-id="receivedDate" value="vm.pod.receivedDate"></openlmis-datepicker>
-                <div ng-if="!vm.pod.receivedDate" class="cell-error-message">{{'msg.fieldRequired' | message}}</div>
+                <openlmis-datepicker input-id="receivedDate" ng-model="vm.pod.receivedDate"></openlmis-datepicker>
+                <div ng-if="vm.pod.$errors.receivedDate" class="cell-error-message">{{vm.pod.$errors.receivedDate}}</div>
             </div>
             <div ng-if="vm.isSubmitted()">{{vm.pod.receivedDate.toDateString()}}</div>
         </dd>
