OLMIS-1502: changed column label from description to definition on admin template screen

--- a/src/main/webapp/admin-template/template.html
+++ b/src/main/webapp/admin-template/template.html
@@ -17,7 +17,7 @@
                         <th>{{'template.header.display' | message}}</th>
                         <th></th>
     					<th>{{'template.header.label' | message}}</th>
-                        <th>{{'label.description' | message}}</th>
+                        <th>{{'label.definition' | message}}</th>
     					<th>{{'template.header.source' | message}}</th>
                         <th></th>
                     </tr>
