Slight styling changes to tables
- pagination directive will now replace the element
- renamed table-sord-order class to table-control to make it more universal
- removed padding-top modification from the table-sort-order directive as
  it was breaking some styles
- moved pagination inside the table-container and restyled it accordingly
- moved the add product button to the table-control div and adjusted it to
  the right
- added product-grid-non-full-supply class

--- a/src/main/webapp/requisition-full-supply/full-supply.html
+++ b/src/main/webapp/requisition-full-supply/full-supply.html
@@ -1,5 +1,5 @@
 <div class="product-grid table-container">
-	<div class="table-sort-order">
+	<div class="table-control">
 		<a href="" ng-click="vm.skipAll()">{{'requisition.lineItem.skip.all' | message}}</a> |
 		<a href="" ng-click="vm.unskipAll()">{{'requisition.lineItem.skip.none' | message}}</a>
 	</div>
@@ -18,9 +18,9 @@
 			</tr>
 		</tbody>
 	</table>
+	<openlmis-pagination current-page="vm.currentPage"
+		is-item-valid="vm.isLineItemValid"
+		change-page="vm.changePage"
+		paginated-items="vm.paginatedLineItems">
+	</openlmis-pagination>
 </div>
-<openlmis-pagination current-page="vm.currentPage"
-	is-item-valid="vm.isLineItemValid"
-	change-page="vm.changePage"
-	paginated-items="vm.paginatedLineItems">
-</openlmis-pagination>
