OLMIS-1535: Modified home screen to use single message for app name

--- a/src/main/webapp/openlmis-home/home.html
+++ b/src/main/webapp/openlmis-home/home.html
@@ -2,7 +2,6 @@
 <div class="home-page">
   <h2>
     <em>{{'welcome.to.message' | message}}</em>
-    <span>{{'title.logistics.management' | message}}</span>
-    <span>{{'title.information.systems' | message}}</span>
+    <span>{{'label.app.header' | message}}</span>
   </h2>
 </div>
