OLMIS-1535: Made entire message into string with line break

--- a/src/main/webapp/openlmis-home/home.html
+++ b/src/main/webapp/openlmis-home/home.html
@@ -1,7 +1,4 @@
 
 <div class="home-page">
-  <h2>
-    <em>{{'welcome.to.message' | message}}</em>
-    <span>{{'label.app.header' | message}}</span>
-  </h2>
+  <h2>{{'welcome.message' | message}}</h2>
 </div>
