--- a/src/main/webapp/requisition-convert-to-order/convert-to-order.html
+++ b/src/main/webapp/requisition-convert-to-order/convert-to-order.html
@@ -61,6 +61,7 @@
 					</tr>
 				</tbody>
 			</table>
+			<openlmis-pagination current-page="vm.searchParams.pageNumber" change-page="vm.reload()"></openlmis-pagination>
 		</section>
 	</div>
 	<div class="toolbar" ng-if="vm.requisitions.length">
