OLMIS-1550: change date formating on POD view screen

--- a/src/main/webapp/proof-of-delivery-view/footer.html
+++ b/src/main/webapp/proof-of-delivery-view/footer.html
@@ -22,7 +22,7 @@
                 <openlmis-datepicker input-id="receivedDate" value="vm.pod.receivedDate"></openlmis-datepicker>
                 <div ng-if="vm.pod.$errors.receivedDate" class="cell-error-message">{{vm.pod.$errors.receivedDate}}</div>
             </div>
-            <div ng-if="vm.isSubmitted()">{{vm.pod.receivedDate.toDateString()}}</div>
+            <div ng-if="vm.isSubmitted()">{{vm.pod.receivedDate | date: 'dd/MM/yyyy'}}</div>
         </dd>
     </dl>
 </aside>
