--- a/src/main/webapp/requisition-product-grid/product-grid-cell.html
+++ b/src/main/webapp/requisition-product-grid/product-grid-cell.html
@@ -1,6 +1,9 @@
 <td>
-	<div ng-if="isReadOnly && !isTotalLossesAndAdjustments && !isSkipped">
+	<div ng-if="isReadOnly && !isTotalLossesAndAdjustments && !isPricePerPack && !isTotalCost && !isSkipped">
 		{{lineItem.getFieldValue(column.name)}}
+	</div>
+	<div ng-if="(isPricePerPack || isTotalCost) && !isSkipped">
+		<openlmis-currency value="lineItem.getFieldValue(column.name)"></openlmis-currency>
 	</div>
 	<input type="text"
 		   ng-model="lineItem[column.name]"
