OLMIS-1550: change received date to received in label

--- a/src/main/webapp/proof-of-delivery-view/footer.html
+++ b/src/main/webapp/proof-of-delivery-view/footer.html
@@ -16,7 +16,7 @@
             </div>
             <div ng-if="vm.isSubmitted()">{{vm.pod.receivedBy}}</div>
         </dd>
-        <dt>{{'label.receivedDate' | message}}</dt>
+        <dt>{{'label.receivedIn' | message}}</dt>
         <dd>
             <div ng-if="!vm.isSubmitted()">
                 <openlmis-datepicker input-id="receivedDate" value="vm.pod.receivedDate"></openlmis-datepicker>
